<resources>
    <string name="app_name">AndroidSample</string>

    <string name="tab_wechat">微信</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>

    <string name="state_normal">按住 说话</string>
    <string name="state_recording">松开 结束</string>
    <string name="state_cancel">松开手指，取消发送</string>

    <string name="dialog_recording">手指上滑，取消发送</string>
    <string name="dialog_cancel">松开手指，取消发送</string>
    <string name="dialog_too_short">录音时间太短</string>

    <string name="download_progress_text">%1$dM/%2$dM</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="image_transition">image</string>

    <string name="jessica">Jessica</string>
    <string name="sunny">Sunny</string>
    <string name="taeyeon">Taeyeon</string>
    <string name="tiffany">Tiffany</string>
    <string name="yoona">Yoona</string>
    <string name="yuri">Yuri</string>

    <string name="taeyeon_detail">金泰妍（Taeyeon），1989年3月9日出生于韩国全罗北道全州市，韩国女歌手、主持人，女子演唱团体少女时代成员之一。2004年在第八届SM青少年选拔大赛歌王中夺得第一名，进入韩国SM娱乐有限公司开始练习生生涯。2007年8月以演唱团体少女时代成员身份正式出道。2008年为韩国KBS电视台电视剧《快刀洪吉童》演唱主题曲《如果》；同年12月凭借歌曲《听得见吗》获得第23届韩国金唱片大奖人气奖。2012年与黄美英、徐珠贤组成了少女时代的小分队组合“TaeTiSeo”。</string>
    <string name="jessica_detail">郑秀妍（Jessica Jung），1989年4月18日出生于美国加利福尼亚州旧金山，韩国女歌手、演员、设计师。2000年，郑秀妍回国探亲时被韩国SM娱乐公司挖掘，成为其旗下练习生，在练习生期间又因为美貌拥有了个人FanClub。2007年8月，以演唱团体少女时代成员身份正式出道，是组合里训练时间最长的成员。2009年，首次在音乐剧《金发尤物》中担任主角“艾莉·伍兹”。</string>
    <string name="sunny_detail">李顺圭（Sunny）本名李纯揆，1989年5月15日出生于美国加利福利亚州洛杉矶市，韩国女歌手、主持人，女子演唱团体少女时代成员之一。李顺圭原本在其父亲的经纪公司训练了9年，准备以"TINTOP"出道时遇上经纪公司倒闭，未能出道。2007年，她在亚由美的推荐下参加韩国SM娱乐有限公司的选秀，成为旗下练习生；同年8月以演唱团体少女时代正式出道。2009年参与综艺节目《青春不败》。</string>
    <string name="tiffany_detail">黄美英（Tiffany），1989年8月1日出生于美国加利福尼亚州旧金山市，韩国女歌手、主持人，女子演唱团体少女时代成员之一。2004年，黄美英在洛杉矶参加“S.M. casting System”选秀后进入韩国SM娱乐有限公司成为旗下练习生。2007年8月以演唱团体少女时代正式出道，担任主唱以及副领舞的职务。2009年凭借歌曲《By Myself》入围“第11届Mnet亚洲音乐大奖”最佳OST奖提名。</string>
    <string name="yuri_detail">权俞利（Yuri），1989年12月5日出生于韩国高阳市，韩国女歌手、演员、主持人，女子演唱团体少女时代成员之一。2001年在首尔参加首届韩国SM娱乐有限公司青少年选拔赛获“最佳舞蹈本赏”后成为旗下练习生。2007年8月以演唱团体少女时代成员身份正式出道。2009年担任音乐节目“MBC音乐中心”的主持人，多次主持年末庆典与演唱会。2012年首次以演员身份主演电视剧《时尚王》，获得韩国SBS演技大奖新星奖与第49届百想艺术大赏电视类最佳人气女演员赏。</string>
    <string name="yoona_detail">林允儿（Yoona），1990年5月30日出生于韩国首尔，韩国女歌手、演员、主持人，女子演唱团体少女时代成员之一。2002年，林允儿被韩国SM娱乐有限公司发掘，正式进入SM公司成为旗下练习生。2007年8月5日以演唱团体少女时代正式出道。2008年在电视连续剧《你是我的命运》担任女主角，凭借该剧获得第45届百想艺术大赏最佳新人女演员奖。2009年参演电视剧《乞丐变王子》；同年凭借电视剧《你是我的命运》获得百想艺术大奖最佳新人女演员奖。</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>

    <string name="is_timeline">是否分享到朋友圈</string>

    <string name="send">发送到微信</string>
    <string name="send_text">发送文本</string>

    <string name="send_img">发送图片</string>
    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>

    <string name="send_pic">发送照片</string>

    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>

    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>

    <string name="send_web_page">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>

    <string name="send_app_data">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>

    <string name="send_emoji">发送表情消息</string>
    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>

    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>

    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>

    <string-array name="loop_list">
        <item>中华人民共和国万岁1</item>
        <item>中华人民共和国万岁2</item>
        <item>中华人民共和国万岁3</item>
        <item>中华人民共和国万岁4</item>
        <item>中华人民共和国万岁5</item>
        <item>中华人民共和国万岁6</item>
        <item>中华人民共和国万岁7</item>
        <item>中华人民共和国万岁8</item>
        <item>中华人民共和国万岁9</item>
        <item>中华人民共和国万岁10</item>
    </string-array>

    <!--

    &#32;     普通的英文半角空格
    &#160;    &nbsp; == &#xA0; == no-break space （普通的英文半角空格但不换行）
    &#12288;  中文全角空格 （一个中文宽度）
    &#8194;   &ensp; == en空格 （半个中文宽度）
    &#8195;   &emsp; == em空格 （一个中文宽度）
    &#8197;   四分之一em空格 （四分之一中文宽度）

    相比平时的空格（&#32;），nbsp拥有不间断（non-breaking）特性。即连续的nbsp会在同一行内显示。即使有100个连续的nbsp，浏览器也不会把它们拆成两行。

    &#8194;   半个中文字更准确点，
    &#8195;   一个中文字但用起来会比中文字宽一点点。
    所以中文对齐还是建议使用&#8194;，
    而&#160; &#8201;在不同机型有不同表现。

    -->

    <!--permission-->
    <string name="permission_message_txt">该相册需要赋予访问存储的权限，不开启将无法正常工作！</string>
    <string name="permission_sure">确定</string>
    <string name="permission_cancle">取消</string>
    <string name="permission_promote_txt">提示：</string>
    <string name="permission_apknohave_txt">当前应用已经没有</string>
    <string name="share_copyto_clipboard">拷贝到了剪切板</string>
    <string name="permission_openpermission">权限，去设置界面打开？</string>
    <string name="permission_readcalendar_txt">读取日历</string>
    <string name="permission_write_calendar_txt">添加日历</string>
    <string name="permission_camera_txt">相机</string>
    <string name="permission_readcontacts_txt">读取联系人</string>
    <string name="permission_writecontacts_txt">添加联系人</string>
    <string name="permission_getaccounts_txt">获取联系人</string>
    <string name="permission_fine_location_txt">定位</string>
    <string name="permission_coarse_location_txt">基站定位</string>
    <string name="permission_recordaudio_txt">录制音频</string>
    <string name="permission_readphone_state_txt">读取电话状态</string>
    <string name="permission_callphone_txt">拨打电话</string>
    <string name="permission_calllog_txt">读取拨打日志</string>
    <string name="permission_write_call_log_txt">添加拨打日志</string>
    <string name="permission_use_sip_txt">呼叫管理</string>
    <string name="permission_process_calls_txt">电话管理</string>
    <string name="permission_body_sensors_txt">传感器</string>
    <string name="permission_sendsms_txt">发送短信</string>
    <string name="permission_receive_sms_txt">接受短信</string>
    <string name="permission_read_sms_txt">读取短信</string>
    <string name="permission_receive_wap_push_txt">接受推送</string>
    <string name="permission_receive_mms_txt">短信拦截</string>
    <string name="permission_read_storage_txt">读取存储</string>
    <string name="permission_write_storage_txt">写存储</string>

    <!-- https://blog.csdn.net/Gaugamela/article/details/54694982 -->
    <string name="fuzzydatetime__now">刚刚</string>

    <plurals name="fuzzydatetime__seconds_ago">
        <item quantity="one">%d 秒前</item>
        <item quantity="other">%d 秒前</item>
    </plurals>
    <plurals name="fuzzydatetime__minutes_ago">
        <item quantity="one">%d 分钟前</item>
        <item quantity="other">%d 分钟前</item>
    </plurals>
    <plurals name="fuzzydatetime__hours_ago">
        <item quantity="one">%d 小时前</item>
        <item quantity="other">%d 小时前</item>
    </plurals>
    <plurals name="fuzzydatetime__days_ago">
        <item quantity="one">%d 天前</item>
        <item quantity="other">%d 天前</item>
    </plurals>
    <plurals name="fuzzydatetime__weeks_ago">
        <item quantity="one">%d 周前</item>
        <item quantity="other">%d 周前</item>
    </plurals>
    <plurals name="fuzzydatetime__months_ago">
        <item quantity="one">%d 月前</item>
        <item quantity="other">%d 月前</item>
    </plurals>
    <plurals name="fuzzydatetime__years_ago">
        <item quantity="one">%d 年前</item>
        <item quantity="other">%d 年前</item>
    </plurals>
</resources>
