<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    style="@style/NavPage">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_vertical"
	    android:orientation="vertical" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:orientation="horizontal">
	        
		    <CheckBox
		        android:id="@+id/is_timeline_cb"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
				android:clickable="true"/>
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/black"
		        android:text="@string/is_timeline"/>
	    </LinearLayout>
       
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
	        android:text="@string/send"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:background="@drawable/layer_wechat_edit_text"
			android:paddingLeft="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:hint="这个一个仿微信的输入框"/>
	    
	    <Button
	        android:id="@+id/send_text"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_text"/>
	    
	    <Button
	        android:id="@+id/send_img"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_img"/>
	    
	    <Button
	        android:id="@+id/send_music"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_music"/>
	    
	    <Button
	        android:id="@+id/send_video"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_video"/>
	    
	    <Button
	        android:id="@+id/send_web_page"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_web_page"/>
	    
	    <Button
	        android:id="@+id/send_app_data"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_app_data"/>
	    
	    <Button
	        android:id="@+id/send_emoji"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_emoji"/>
	        
	    <Button
	        android:id="@+id/get_token"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/get_token_from_weixin"/>
	    
	    <Button
	        android:id="@+id/unregister"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/unregister_from_weixin"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
			style="@style/CommonButtonNormal"
            android:layout_margin="10dp"
			android:text="按钮样式背景渐变带阴影可点击"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
			style="@style/CommonButtonNoClick"
			android:layout_margin="10dp"
			android:text="按钮样式背景渐变带阴影不可点击"/>
	</LinearLayout>
</ScrollView>