<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_wechat_bg"
        android:orientation="horizontal" >

        <com.jackie.sample.custom_view.ChangeColorIconWithTextView
            android:id="@+id/indicator_wechat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:icon="@drawable/ic_menu_wechat"
            app:text="@string/tab_wechat"
            app:text_size="15sp" />

        <com.jackie.sample.custom_view.ChangeColorIconWithTextView
            android:id="@+id/indicator_contact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:icon="@drawable/ic_menu_contact"
            app:text="@string/tab_contact"
            app:text_size="15sp" />

        <com.jackie.sample.custom_view.ChangeColorIconWithTextView
            android:id="@+id/indicator_discovery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:icon="@drawable/ic_menu_discovery"
            app:text="@string/tab_find"
            app:text_size="15sp" />

        <com.jackie.sample.custom_view.ChangeColorIconWithTextView
            android:id="@+id/indicator_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:icon="@drawable/ic_menu_me"
            app:text="@string/tab_me"
            app:text_size="15sp" />
    </LinearLayout>
</LinearLayout>